mock-test/5th Sept/istio_1_26_mesh_gateway_virtualservice_lab_pack/02-one-vs-two-contexts/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: edge-gateway
  namespace: mesh-gateway-labs
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.example.test"
