mock-test/5th Sept/istio_1_26_mesh_gateway_virtualservice_lab_pack/02-one-vs-two-contexts/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: payments
  namespace: mesh-gateway-labs
spec:
  hosts:
  - payments.mesh-gateway-labs.svc.cluster.local
  - payments.example.test
  gateways:
  - mesh
  - edge-gateway
  http:
  - match:
    - gateways: ["mesh"]
      uri:
        prefix: /payments/admin
    headers:
      response:
        set:
          X-Entry-Point: internal
    route:
    - destination:
        host: backend.mesh-gateway-labs.svc.cluster.local
        subset: v2
  - match:
    - gateways: ["mesh"]
    headers:
      response:
        set:
          X-Entry-Point: internal
    route:
    - destination:
        host: backend.mesh-gateway-labs.svc.cluster.local
        subset: v1
  - match:
    - gateways: ["edge-gateway"]
    headers:
      response:
        set:
          X-Entry-Point: external
    route:
    - destination:
        host: backend.mesh-gateway-labs.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backend
  namespace: mesh-gateway-labs
spec:
  host: backend.mesh-gateway-labs.svc.cluster.local
  subsets:
  - name: v1
    labels: {version: v1}
  - name: v2
    labels: {version: v2}
